
cmake_minimum_required(VERSION 3.5)

set(CMAKE_CXX_COMPILER "/usr/bin/g++")
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_BUILD_TYPE Debug)

project(aoc)

add_executable(1 1/solution.cpp)
add_executable(2 2/solution.cpp)
add_executable(3 3/solution.cpp)
add_executable(4 4/solution.cpp)
add_executable(5 5/solution.cpp)
add_executable(6 6/solution.cpp)
add_executable(7 7/solution.cpp)
add_executable(8 8/solution.cpp)
add_executable(9 9/solution.cpp)


